# Hotel-Booking-System

./: .coverage  .env  .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: interactive.mdc  interactive_feedback.mdc  rule_generating_agent.mdc
app/: main.py
app/core/: config.py  redis.py
app/models/: __init__.py  amenity.py  booking.py  cancellation_policy.py  chat_message.py  customer_profile.py  daily_price.py  email_token.py  experience.py  inventory.py  location.py  notification.py  organization.py  payment.py  property.py  property_image.py  rate_plan.py  review.py  room.py  room_type.py  subscription.py  user.py
app/routers/: admin.py  ai.py  analytics.py  auth.py  availability.py  bookings.py  chat.py  customers.py  experiences.py  inventory.py  organizations.py  payments.py  properties.py  public.py  rooms.py  search.py  staff.py  subscriptions.py  user.py  users.py
app/schemas/: ai.py  amenity.py  analytics.py  auth.py  availability.py  booking.py  cancellation_policy.py  chat.py  chat_message.py  customer.py  daily_price.py  experience.py  favorite.py  inventory.py  location.py  notification.py  organization.py  payment.py  property.py  property_image.py  rate_plan.py  review.py  room.py  room_type.py  subcription.py  user.py
app/services/: ai_recommend.py  booking_service.py  mail_service.py  task_queue.py  user_service.py
app/utils/: dependencies.py  enums.py  helpers.py  jwt.py  rate_limiter.py  security.py  token_store.py
app/worker/: celery_app.py  tasks.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  env.template.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: ProtectedRoute.tsx  RoleGuard.tsx
frontend/src/components/common/: PublicHeader.tsx
frontend/src/components/layouts/: AdminLayout.tsx  AuthLayout.tsx  DashboardLayout.tsx  Header.tsx  Sidebar.tsx  StaffLayout.tsx
frontend/src/components/ui/: AIChatbot.tsx  Badge.tsx  Button.tsx  Card.tsx  CustomerService.tsx  LiveStaffChat.tsx  LoadingSpinner.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: BookingPage.tsx  Favorites.tsx  LandingPage.tsx  MyBookings.tsx  Profile.tsx  PropertyDetails.tsx  RoomDetails.tsx  RoomsPage.tsx  SearchResults.tsx  TestAuth.tsx
frontend/src/pages/admin/: AdminDashboard.tsx  AdminUsers.tsx  Analytics.tsx  Bookings.tsx  Dashboard.tsx  Organizations.tsx  Properties.tsx  Users.tsx
frontend/src/pages/auth/: LoginPage.tsx  OtpPage.tsx  RegisterPage.tsx
frontend/src/pages/organization/: Bookings.tsx  Dashboard.tsx  Members.tsx  Properties.tsx  Settings.tsx  Subscription.tsx
frontend/src/pages/staff/: Bookings.tsx  Customers.tsx  Dashboard.tsx  StaffDashboard.tsx
frontend/src/services/: authService.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: api.ts  index.ts
nginx/: default.conf  nginx.conf
scripts/: add_sample_rooms.py  build-frontend.sh  create_basic_data.py  dev-full.sh  dev.sh
